Fix thumbnail overlapping.

--- a/app/assets/stylesheets/demo/category.less
+++ b/app/assets/stylesheets/demo/category.less
@@ -1,6 +1,7 @@
 #product-list {
     margin: 10px 5px 10px 50px;
     position: relative;
+    opacity: 0;
 
 
     .product-item {
